--- a/scss/photographer/photographerCard.scss
+++ b/scss/photographer/photographerCard.scss
@@ -1,5 +1,5 @@
 main.photographer{
-    article.photographerCard{
+    section.photographerCard{
         font-family: $familyFont;
         background-color: $lightGreyBack;
         display: flex;
