--- a/scss/photographer/dropdown.scss
+++ b/scss/photographer/dropdown.scss
@@ -16,6 +16,7 @@ filter {
     padding-right: 1rem;
     color: white;
     position: relative;
+    z-index: 1;
     // border-top: 1px solid white;
     i{
         padding-left: 1rem;
