--- a/scss/photographer/mediaCard.scss
+++ b/scss/photographer/mediaCard.scss
@@ -11,6 +11,7 @@
         grid-template-rows: auto 3rem;
         margin-bottom: 1rem;
         font-family: $familyFont;
+        cursor: pointer;
         video, .imgMedia{
             grid-area: image;
             width: 100%;
