fix esLint errors

--- a/scss/photographer/photographer.scss
+++ b/scss/photographer/photographer.scss
@@ -14,3 +14,9 @@ main.photographer{
         }
     }
 }
+
+.photographerHeader{
+    justify-content: flex-start;
+    width: 85%;
+    margin: auto;
+}
