--- a/scss/composants/mediaPopup.scss
+++ b/scss/composants/mediaPopup.scss
@@ -31,7 +31,7 @@
             margin: auto;
             padding: 10px;
             font-family: $familyFont;
-            font-size: 1rem;
+            font-size: 24px;
             color: $couleurSecondaireFont;
         }
         .iconContent{
