--- a/scss/photographer/photographerCard.scss
+++ b/scss/photographer/photographerCard.scss
@@ -6,30 +6,31 @@ main.photographer{
         flex-flow: row-reverse nowrap;
         justify-content: space-between;
         align-items: center;
+        padding: 3rem;
         img.imgPhotographer{
-            width: 12.5rem;
-            height: 12.5rem;
+            width: 200px;
+            height: 200px;
             object-fit: cover;
             border-radius: 50%;
-            margin-bottom: 1rem;
         }
         h2{
-            font-size: 36px;
+            font-size: 64px;
             line-height: 47px;
             font-weight: 400;
             color: $couleurPrimaireFont;
-            margin: 0;
+            margin: 0 0 2rem 0; 
         }
         .location{
-            font-size: 13px;
+            font-size: 24px;
             line-height: 17px;
             color: $couleurSecondaireFont;
             font-weight: 400;
+            margin: 0 0 2rem 0;
         }
         .tagline{
-            font-size: 10px;
+            font-size: 18px;
             line-height: 13px;
-            margin: 0.2rem;
+            margin: 0;
         }
         .contentTag{
             margin-top: 0.3rem;
@@ -40,9 +41,10 @@ main.photographer{
             justify-content: center;
         }
         button{
-            height: 4rem;
-            width: 8rem;
-            font-size: 0.8rem;
+            height: 69px;
+            width: 170px;
+            font-size: 20px;
+            font-weight: 700;
             background-color: $couleurPrimaireBack;
             color: white;
             border: 0;
