Adaptation test Achecker

--- a/scss/photographer/dropdown.scss
+++ b/scss/photographer/dropdown.scss
@@ -18,7 +18,7 @@ filter {
     position: relative;
     z-index: 1;
     // border-top: 1px solid white;
-    i{
+    em{
         padding-left: 1rem;
     }
     &:before{
