--- a/scss/photographer/mediaCard.scss
+++ b/scss/photographer/mediaCard.scss
@@ -31,7 +31,7 @@
             grid-area: likes;
             justify-content: flex-end;
             color: $couleurSecondaireFont;
-            i{
+            em{
                 margin-left: 1rem;
             }
         }
